------------------------------------------------------------------------------
cppman Changelog
------------------------------------------------------------------------------

cppman 2.2.0 (January 19th, 2013):
	
	Bug fixed:
	* Fix formatting due to the change of cplusplus.com
	* Fix syntax highlighting in vim

	Features added:
	* Reimplement table converter, now support unlimited column table
	  generation

cppman 0.2.0 (September 19th, 2012):

	Bug fixed:
	* Fix formatting due to the change of cplusplus.com

	Misc:
	* Rename project from manpages-cpp to cppman

cppman 0.1.9 (April 22th, 2012):

	Bug fixed:
	* Fix formatting due to the change of cplusplus.com

cppman 0.1.8 (November 29th, 2011):

	Bug fixed:
	* Fix formatting due to the change of cplusplus.com


cppman 0.1.7 (October 7th, 2011):

	Bug fixed:
	* Minor formating bug

	Features added:
	* Pager is now configurable, either 'vim' or 'less' is accepted.
	* Integration of mandb is now configurable, default disabled.

cppman 0.1.6 (April 2nd, 2011):

	Bug fixed:
	* Fix formatting due to the change of cplusplus.com

cppman 0.1.5 (January 31th, 2011):

	Bug fixed:
	* Backslashs in EXAMPLE section disapears
	* Empty "#include" line in some pages

	Features added:
	* Syntax highlighting support for SYNOPSIS and EXAMPLE section
	* Update database

cppman 0.1.3 (September 26th, 2010):

	Features added:
	* Add BSD support (Issue #1)

cppman 0.1.2 (September 21th, 2010):

	Bugs fixed:
	* Minor bug fix

cppman 0.1.1 (September 11th, 2010):

	Bugs fixed:
	* Minor bug fix

	Features added:
	* Enable mandb support

cppman 0.1.0 (September 11th, 2010):

	* Initial release