@@ -4,6 +4,7 @@ AZ Huang <aitjcize@gmail.com>
 
 Contributors
 ------------
+Stanley <dtx_2503@yahoo.com>
 
 Authors of External source
 --------------------------
