@@ -1,6 +1,10 @@
 ------------------------------------------------------------------------------
 cppman Changelog
 ------------------------------------------------------------------------------
+cppman 0.2.1 (November 25th, 2012):
+    
+    Misc:
+    * Change to use python3, with 2to3
 
 cppman 2.2.0 (January 19th, 2013):
 	
